<resources>
    <string name="app_name">Burda Contraco</string>
    <string name="image_description">Image</string>
    <string name="text_primary">Sample of title text</string>
    <string name="text_subtitle">Sample of subtitle text</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_map">Maps</string>
    <string name="menu_favorite">Favorite</string>
    <string name="title_activity_detail_home">DetailHomeActivity</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cancel">Batalkan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Registrasi</string>
    <string name="beranda">Beranda</string>
    <string name="surat_jalan">Surat Jalan</string>
    <string name="delivery_order">Delivery Order</string>
    <string name="delivery_order_aktif">Delivery Order Aktif</string>
    <string name="kendaraan">Kendaraan</string>
    <string name="gudang">Gudang</string>
    <string name="surat_jalan_gp">Pengiriman Gud-Pro</string>
    <string name="surat_jalan_pp">Pengiriman Pro-Pro</string>
    <string name="surat_jalan_pengembalian">Pengembalian</string>
    <string name="perusahaan">Perusahaan</string>
    <string name="see_all">Lihat\nSemua</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="placeholder_email">Masukan Email</string>
    <string name="password">Password</string>
    <string name="placeholder_pw">Masukan Password</string>
    <string name="no_account">Belum Punya Akun?</string>
    <string name="cd_logo">Logo</string>
    <string name="no_internet">Internet Tidak Tersedia</string>
    <string name="connected">Terhubung ke Jaringan</string>
    <string name="default_notification_channel_id">1234</string>
    <string name="default_notification_channel_name">FCM</string>
    <string name="msg_token_fmt">FCM registration Token: %s</string>
    <string name="permission_location_required">Akses lokasi diperlukan untuk menggunakan aplikasi.</string>
    <string name="ok">OK</string>
    <string name="permission_location_granted">Akses lokasi diberikan. Anda dapat menggunakan aplikasi.</string>
    <string name="unknown_address">Alamat Tidak Diketahui</string>
    <string name="password_less_6">Password Kurang Dari 8 Karakter</string>
    <string name="confirm_pass_wrong">Konfirmasi Password Tidak Sesuai</string>
    <string name="number_less_10">Nomor Hp Kurang dari 11 Digit</string>
    <string name="number_first_digit">Nomor Hp Harus diawali 0</string>
    <string name="empty_form">Input Tidak Boleh Kosong</string>
    <string name="email_incorrect">Email Tidak Valid</string>
    <string name="have_account">Sudah Punya Akun?</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="device_token">Device Token</string>
    <string name="token">Token</string>
    <string name="role">Role</string>
    <string name="user_id">User Id</string>
    <string name="kode_surat">Kode Surat</string>
    <string name="status">Status</string>
    <string name="icon_jenis">Icon Jenis</string>
    <string name="nama_asal">Nama Asal</string>
    <string name="alamat_asal">Alamat Asal</string>
    <string name="nama_tujuan">Nama Tujuan</string>
    <string name="alamat_tujuan">Alamat Tujuan</string>
    <string name="nama_user">Nama User</string>
    <string name="tanggal_update">Tanggal Update</string>
    <string name="cari_kode_surat_jalan">Cari Kode Surat Jalan</string>
    <string name="menunggu_admin_gudang">Menunggu\nAdmin Gudang</string>
    <string name="menunggu_driver">Menunggu\nDriver</string>
    <string name="selesai">Selesai</string>
    <string name="selesai_surat_jalan">Selesai SJ</string>
    <string name="icon_filter">Icon Filter</string>
    <string name="dalam_nperjalanan">Dalam\nPerjalanan</string>
    <string name="sj_pengiriman_gudang_proyek">Surat Jalan Pengiriman Gudang-Proyek</string>
    <string name="sj_pengiriman_gudang_proyek_aktif">Surat Jalan Pengiriman Gudang-Proyek Aktif</string>
    <string name="number_placeholder">0</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="sj_pengiriman_proyek_proyek">Surat Jalan Pengiriman Proyek-Proyek</string>
    <string name="sj_pengiriman_proyek_proyek_aktif">Surat Jalan Pengiriman Proyek-Proyek Aktif</string>
    <string name="sj_pengembalian">Surat Jalan Pengembalian</string>
    <string name="sj_pengembalian_aktif">Surat Jalan Pengembalian Aktif</string>
    <string name="toggle_menu">toggle menu</string>
    <string name="sj_dalam_perjalanan">Surat Jalan Sedang Diantarkan</string>
    <string name="do_dalam_perjalanan">Delivery Order Sedang Diantarkan</string>
    <string name="format_do_dalam_perjalanan">%d Perjalanan DO</string>
    <string name="format_do_menunggu_konfirmasi">%d Menunggu DO</string>
    <string name="purchasing">Purchasing</string>
    <string name="admin_gudang">Admin Gudang</string>
    <string name="driver">Driver</string>
    <string name="supervisor">Supervisor</string>
    <string name="empty_active_delivery_order">Tidak Ada Delivery Order Aktif</string>
    <string name="empty_active_kendaraan">Belum Ada Kendaraan yang Digunakan</string>
    <string name="user_cant_use_app">Anda Belum Bisa Menggunakan Aplikasi, Silahkan Hubungi Admin untuk Mengubah Role Anda</string>
    <string name="kode_do">Kode Delivery Order</string>
    <string name="profile">Profile</string>
    <string name="keluar">Keluar</string>
    <string name="tracking_lokasi_aktif">Tracking Lokasi Aktif</string>
    <string name="tracking_lokasi_tidak_aktif">Tracking Lokasi Tidak Aktif</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="itinerary_markers_title">Title</string>
    <string name="title">Title</string>
    <string name="sub_description">Sub Description</string>
    <string name="third_description">Third Description</string>
    <string name="detail_delivery_order">Detail Delivery Order</string>
    <string name="tanggal_dibuat">Tanggal dibuat</string>
    <string name="terakhir_diperbarui">Terakhir diperbarui</string>
    <string name="dummy_date">30 Desember 2023, 10:00</string>
    <string name="asal_dan_tujuan">Asal dan Tujuan</string>
    <string name="pilih_driver_kendaraan"><![CDATA[Pilih Driver & Kendaraan]]></string>
    <string name="pantau_lokasi">Pantau Lokasi</string>
    <string name="ubah_driver_kendaraan"><![CDATA[Ubah Driver & Kendaraan]]></string>
    <string name="ubah_delivery_order">Ubah Delivery Order</string>
    <string name="tambah_ttd_tandai_selesai"><![CDATA[Tambah TTD & Tandai Selesai]]></string>
    <string name="ambil_barang">Ambil Barang</string>
    <string name="tambah_foto_bukti_antar_barang"><![CDATA[Tambah Foto Bukti & Antar Barang]]></string>
    <string name="telusuri_rute_lokasi">Telusuri Rute Lokasi</string>
    <string name="pemohon">Pemohon</string>
    <string name="tanggal_pengambilan">Tanggal Pengambilan</string>
    <string name="nomor_hp">Nomor Hp</string>
    <string name="perihal">Perihal</string>
    <string name="untuk_perhatian">Untuk Perhatian</string>
    <string name="hubungi">Hubungi</string>
    <string name="daftar_pre_order">Daftar Pre Order</string>
    <string name="kode_pre_order">Kode Pre Order</string>
    <string name="ukuran_dan_satuan">Ukuran dan Satuan</string>
    <string name="keterangan">Keterangan</string>
    <string name="nama_material">Nama Material</string>
    <string name="hormat_kami_pt_burda_contraco">Hormat kami, PT Burda Contraco</string>
    <string name="tertanda_pemohon">Tertanda Pemohon</string>
    <string name="detail_surat_jalan">Detail Surat Jalan</string>
    <string name="antar_barang">Antar Barang</string>
    <string name="tambah_foto_bukti">Tambah Foto Bukti</string>
    <string name="foto_bukti_pengambilan_barang">Foto Bukti Pengambilan Barang</string>
    <string name="ubah_surat_jalan">Ubah Surat Jalan</string>
    <string name="site_manager">Site Manager</string>
    <string name="daftar_barang">Daftar Barang</string>
    <string name="barang_tidak_habis_pakai">Barang Tidak Habis Pakai</string>
    <string name="nomor_seri">Nomor Seri</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="jumlah_dan_satuan">Jumlah dan Satuan</string>
    <string name="merk_barang">Merk Barang</string>
    <string name="ukuran">Ukuran</string>
    <string name="tanda_tangan">Tanda Tangan</string>
    <string name="supervisor_peminjam">Supervisor (Peminjam)</string>
    <string name="foto_bukti">Foto Bukti</string>
    <string name="barang_habis_pakai">Barang Habis Pakai</string>
    <string name="tanda_tangan_di_bawah">Tanda Tangan Di Bawah</string>
    <string name="hapus">Hapus</string>
    <string name="tanda_tanganmu">Tanda Tanganmu</string>
    <string name="proyek">Proyek</string>
    <string name="none">-</string>
    <string name="pemberi">Pemberi</string>
    <string name="pengirim">Pengirim</string>
    <string name="penerima">Penerima</string>
    <string name="peminjaman">Peminjaman</string>
    <string name="ttd_empty">Anda belum memiliki tanda tangan</string>
    <string name="jumlah_satuan">%1$s %2$s</string>
    <string name="cetak_delivery_order">Cetak Delivery Order</string>
    <string name="penanda_selesai">Penanda selesai</string>
    <string name="upload_foto_bukti">Upload Foto Bukti</string>
    <string name="upload_foto_profil">Upload Foto Profil</string>
    <string name="cd_button">This is Button</string>
    <string name="cd_icon">This is Icon</string>
    <string name="tandai_selesai">Tandai Selesai</string>
    <string name="rute_menuju">"Rute menuju %s"</string>
    <string name="perkiraan_jarak">Perkiraan Jarak</string>
    <string name="perkiraan_waktu">Perkiraan Waktu</string>
    <string name="menunggu_surat_jalan">Menunggu Surat Jalan</string>
    <string name="peminjaman_gudang_proyek">Peminjaman Gudang Proyek</string>
    <string name="peminjaman_proyek_proyek">Peminjaman Proyek Proyek</string>
    <string name="penggunaan_gudang_proyek">Penggunaan Gudang Proyek</string>
    <string name="penggunaan_proyek_proyek">Penggunaan Proyek Proyek</string>
    <string name="pengembalian_peminjaman">Pengembalian Peminjaman</string>
    <string name="pengembalian_penggunaan">Pengembalian Penggunaan</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="camera_x">Camera X</string>
    <string name="empty_image_warning">Gambar tidak boleh kosong</string>
    <string name="foto_bukti_saat_ini">Foto Bukti Saat Ini</string>
    <string name="belum_ada_foto_bukti">Belum ada foto bukti</string>
    <string name="jarak_dari_lokasimu">%s dari lokasimu</string>
    <string name="kota_dan_provinsi">%1$s, %2$s</string>
    <string name="nama">Nama</string>
    <string name="placeholder_nama">Masukan Nama</string>
    <string name="placeholder_no_hp">Cth: 08123234111</string>
    <string name="no_hp">Nomor Hp</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="pengguna">Pengguna</string>
</resources>