<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" 
	android:orientation="horizontal"
	android:background="@drawable/info_window_background"
	android:paddingHorizontal="20dp"
	android:paddingVertical="10dp"
	>
	<ImageView android:id="@+id/bubble_image"
		android:layout_width="65dp"
		android:layout_height="65dp"
		android:paddingStart="5dp"
		android:visibility="gone"
		android:contentDescription="@string/destination" />
	<LinearLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:orientation="vertical" >
		<LinearLayout 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:orientation="horizontal" >
	    	<TextView android:id="@+id/bubble_title" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:maxEms="17"
				android:text="@string/title" />
	    </LinearLayout>
		<TextView android:id="@+id/bubble_description" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/black"
			android:textSize="12sp"
			android:maxEms="17"
			android:text="@string/sub_description" />
		<TextView android:id="@+id/bubble_subdescription" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/black"
			android:textSize="12sp"
			android:maxEms="17"
			android:text="@string/third_description" />
	</LinearLayout>
</LinearLayout>
