<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.LoginFragment"
    android:background="@color/white"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp"
    >
        <TextView
            android:id="@+id/tv_login"
            style="@style/HeadingCenter"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/LabelEditText"
            android:paddingBottom="5dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            />

        <com.android.burdacontractor.core.ui.customview.CustomTextInputLayout
            android:id="@+id/et_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/CustomEditText"
                android:hint="@string/placeholder_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        </com.android.burdacontractor.core.ui.customview.CustomTextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            style="@style/LabelEditText"
            android:paddingBottom="5dp"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email_layout" />

        <com.android.burdacontractor.core.ui.customview.CustomTextInputLayout
            android:id="@+id/et_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/CustomEditText"
                android:hint="@string/placeholder_pw"
                android:inputType="textPassword" />
        </com.android.burdacontractor.core.ui.customview.CustomTextInputLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/rounded_white"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_login"
            style="@style/ButtonFullWidth"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:background="@drawable/button_state"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password_layout"/>

        <TextView
            android:id="@+id/tv_no_acc"
            style="@style/TextViewAskAccount"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/no_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/tv_register"
            style="@style/TextViewAskAccount"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/register"
            android:textColor="@color/primary_main"
            app:layout_constraintBottom_toBottomOf="@id/tv_no_acc"
            app:layout_constraintStart_toEndOf="@+id/tv_no_acc"
            app:layout_constraintTop_toTopOf="@+id/tv_no_acc" />

    </androidx.constraintlayout.widget.ConstraintLayout>