<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_register"
            style="@style/HeadingCenter"
            android:text="@string/ubah_profil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nama"
            style="@style/LabelEditText"
            android:text="@string/nama"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register" />

        <com.android.burdacontractor.core.presentation.customview.CustomTextInputLayout
            android:id="@+id/et_nama_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nama"
                style="@style/CustomEditText"
                android:hint="@string/placeholder_nama"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nama" />

        </com.android.burdacontractor.core.presentation.customview.CustomTextInputLayout>

        <TextView
            android:id="@+id/tv_email"
            style="@style/LabelEditText"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_nama_layout" />

        <com.android.burdacontractor.core.presentation.customview.CustomTextInputLayout
            android:id="@+id/et_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/CustomEditText"
                android:hint="@string/placeholder_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        </com.android.burdacontractor.core.presentation.customview.CustomTextInputLayout>

        <TextView
            android:id="@+id/tv_no_hp"
            style="@style/LabelEditText"
            android:text="@string/no_hp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email_layout" />

        <com.android.burdacontractor.core.presentation.customview.CustomTextInputLayout
            android:id="@+id/et_no_hp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_no_hp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_no_hp"
                style="@style/CustomEditText"
                android:hint="@string/placeholder_no_hp"
                android:inputType="number" />
        </com.android.burdacontractor.core.presentation.customview.CustomTextInputLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/rounded_white"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_register"
            style="@style/ButtonFullWidth"
            android:layout_marginTop="20dp"
            android:text="@string/ubah_profil"
            android:background="@drawable/button_state"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_no_hp_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>