<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_surat_jalan"
    app:cardElevation="2dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
            />
            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_barang"
                android:fontFamily="@font/inter_semi_bold"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="14sp"/>
        <TextView
            android:fontFamily="@font/inter_medium"
            android:id="@+id/tv_merk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merk_barang"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:fontFamily="@font/inter_medium"
            android:id="@+id/tv_ukuran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ukuran"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:fontFamily="@font/inter_regular"
            android:id="@+id/tv_jumlah_satuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_dan_satuan"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>