<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_gudang"
    app:cardElevation="5dp"
    app:cardCornerRadius="20dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginHorizontal="5dp"
    app:strokeColor="@color/input"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="10dp"
        android:paddingBottom="15dp"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_gudang"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_image"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
            android:scaleType="centerCrop"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:maxLines="2"
            android:layout_marginStart="5dp"
            android:text="@string/gudang"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_jarak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/inter_medium"
            android:maxLines="2"
            android:layout_marginTop="10dp"
            android:text="@string/jarak_dari_lokasimu"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:drawablePadding="5dp"
            app:drawableStartCompat="@drawable/marker_ic_marker"
            app:drawableTint="@color/black" />

        <TextView
            android:id="@+id/tv_alamat"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_light"
            android:maxLines="2"
            android:text="@string/alamat_asal"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_kota_provinsi"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:maxLines="2"
            android:layout_marginTop="5dp"
            android:text="@string/kota_dan_provinsi"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_tanggal"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/tanggal_update"
            android:textColor="@color/gray_dark"
            android:textSize="12sp" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>